# LicheeRVNano

./: README.md
Projects/ArucoDetector/: CMakeLists.txt  main.cpp
Projects/BarcodeDetector/: CMakeLists.txt  README.md  main.cpp
Projects/CVIMath/: CMakeLists.txt  README.md  mul.cpp  mul.py  sample_gemm.cpp
Projects/CustomBuildOptimization/: README.md
Projects/CustomBuildOptimization/optimized/: buildroot_defconfing
Projects/CustomBuildOptimization/tiny/: buildroot_defconfig
Projects/CustomModels/: README.md  bulk_check_cosine.py  dqn.py  messy_postprocess_bf16.py
Projects/CustomModels/DQN/: DQN_Export.ipynb
Projects/CustomModels/NanoTrack/: CMakeLists.txt  main.cpp
Projects/CustomModels/jupyter/: DQN_Export.ipynb
Projects/Docker/: buildroot_flags.txt  linux_flags_dump.txt
Projects/FreeRTOS/examples/hello_world/: comm_main.c
Projects/FreeRTOS/examples/toggle_pin/: comm_main.c
Projects/FreeRTOS/examples/uart/: task.c
Projects/FreeRTOS/mailbox_linux_client/: Makefile  main.c
Projects/FreeRTOS/mailbox_small_core/: comm_main.c  rtos_cmdqu.h
Projects/GPIO/: Makefile  README.md  gpio.h  main.c  pwmTest.c
Projects/HelloWorld/: Makefile  main.c
Projects/IVE/: CMakeLists.txt  main.cpp
Projects/Interfaces/BitBanging/: README.md
Projects/Interfaces/I2C/: Makefile  README.md  main.c
Projects/Interfaces/SPI/: Makefile  README.md  enable_spi2.sh  enable_wifi.sh  main.c
Projects/Interfaces/UART/: Makefile  main.c
Projects/Interfaces/UART_RX/: Makefile  main.c
Projects/Interrupts/: Makefile  main.c
Projects/LLama/: README.md  compilation_fixes.patch
Projects/LinuxIPC/: ipc.h  ipc.py  messages.h  publisher.c  subscriber.c
Projects/MJPEGStream/: main.cpp
Projects/OTGCamera/: CMakeLists.txt  Makefile  main.c  main.cpp
Projects/OTGCamera/IPC/: reader.py
Projects/OTGCamera/IPC/cpp/: main.cpp
Projects/OTGCamera/IPC/cpp/libs/: download.sh
Projects/OpenCVMobile/: CMakeLists.txt
Projects/OpenCV_CSI_Camera/: CMakeLists.txt  README.md  main.cpp
Projects/OpenCV_CSI_Camera/opencv_mobile_patching/: build_licheerv_nano.sh  pins.patch
Projects/ROS2Bridge/: CMakeLists.txt  README.md  main.cpp  udp_client.py
Projects/ROS2Bridge/libs/ros2_bridge/: messages.h  transport.h
Projects/RealtimeLinux/: README.md  linux.txt
Projects/RiscvROS2/: README.md  in_qemu.sh  run_qemu.sh
Projects/RiscvROS2/OpenEulerPort/: README.md
Projects/TDLSdk/: CMakeLists.txt  main.cpp
Projects/YoloCamera/: CMakeLists.txt  README.md  config.h  main.c  main.cpp  yolo.cpp  yolo.hpp
Projects/YoloDeepsort/: CMakeLists.txt  main.cpp  yolo.cpp  yolo.hpp
Projects/Yolo_Benchmark/: Makefile  bulk_resize.py  config.txt  main.c
Projects/Yolov8/: CMakeLists.txt  EXPORT_GUIDE.md  Makefile  README.md  board_setup.sh  export_to_onnx.py  main.c  sample_yolov8  yolo_to_cvimodel.ipynb
Projects/ZenohPico/: .gitignore  CMakeLists.txt  README.md  main.c  sub.py
Projects/ZenohPico/zenoh/include/: zenoh-pico.h
Tools/: LicheeRV_Nano_Cross_Compile.ipynb  devmem
